# clutter

./: PLAN.md  README.md  package-lock.json  pubspec.yaml
.fdemon/: config.toml
android/app/: build.gradle.kts
docs/: PLAN.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: music_library.dart
lib/services/: audio_handler.dart  audio_service_helper.dart  cover_img_loader.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/ui/views/: albums_view.dart  artists_view.dart  c_view.dart  library_view.dart  mediabar.dart  playlist_view.dart  playlists_view.dart  quick_play_sidebar.dart  settings_view.dart  songs_view.dart
lib/ui/widgets/: collection_context_menu.dart  confirm_dialog.dart  search_sliver_app_bar.dart  (+2 more)
lib/utils/: colors.dart  log.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: complex.rs  db.rs  downloaders.rs  metadata.rs  mod.rs  scanner.rs  schema.sql  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_clutter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_clutter.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+7 files in other folders)
