[package]
name = "rust_lib_clutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
env_logger = "0.11.10"
flutter_rust_bridge = "=2.12.0"
log = "0.4.29"
rusqlite = { version = "0.31", features = ["bundled"] }
symphonia = { version = "0.5.5", features = ["all"] }
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
